=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.13 - In development

=over

=item *

Fixed problems with un-localized C<$@> which could make some error
messages not appear in the logs. [Michael Peters]

=item *

Fixed wacky partial error screen when unexpected erorrs happened during
publish from the web UI. [Michael Peters]

=back

=head2 3.12 - Jan, 13 2011

=over

=item *

Added C<--NoStart> option to F<bin/krang_install> when you want to install
but then later tweek things (like F<conf/krang.conf>) before starting the
servers. [Michael Peters]

=item *

Added C<--NoDB> option to F<bin/krang_install> for use when you already
have an existing Krang DB and want a new install to use that. [Michael Peters]

=item *

Added "hostname dictionary" feature to F<krang.conf> so that you can
specify different values for configuration directives per-hostname.
This allows multiple machines in a Krang cluster to share the same
F<krang.conf> file. [Michael Peters]

=item *

Fix bug in F<krang_ctl> that incorrectly used C<sudo> when
starting/stopping the scheduler. [Michael Peters]

=item *

Prevent media files from getting spaces (or other forbidden characters)
in their filenames when bulk-uploaded or added via FTP (already forbidden
in the web UI). [Michael Peters]

=item *

Updated accidental limit where publisher couldn't handle story_ids over
4194304. [Mike Lampson & Michael Peters]

=item *

Don't delete temporary expanded XML files when a KDS import fails so it
can be inspected. [Michael Peters]

=item *

Fix problem of starting Apache still being attached to the IO of the starting
terminal making it hang SSH sessions. [Michael Peters]

=item *

Fix bug of F<krang_ftpd> where the new FTP daemon wasn't always detaching
itself from the terminal process that started it, thus hanging SSH
sessions when trying to disconnect.

=item *

Fixed bug in IE where people randomly lose their session if they are doing