@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+C<hidden> parameters of elements can now be a subroutine reference which
+will be executed at runtime and that value used. [Michael Peters]
+
+=item *
+
 Fixed problems with un-localized C<$@> which could make some error
 messages not appear in the logs. [Michael Peters]
 
